# sodium

./: .all-contributorsrc  .editorconfig  .eslintignore  .gitattributes  .gitignore  .gitmodules  .markdownlint.jsonc  .prettierignore  .yarnrc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  aarch64.Dockerfile  build.rs  clippy.toml  index.html  jest.config.ts  modules.html  package.json  tsconfig.eslint.json  typedoc.json
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: THIRD_PARTY_LICENSES  labels.yml  renovate.json
assets/: highlight.css  search.js
benchmark/: bench.ts
functions/: crypto_aead_chacha20poly1305_decrypt.html  crypto_aead_chacha20poly1305_decrypt_detached.html  crypto_aead_chacha20poly1305_encrypt.html  crypto_aead_chacha20poly1305_encrypt_detached.html  crypto_aead_chacha20poly1305_ietf_decrypt.html  crypto_aead_chacha20poly1305_ietf_decrypt_detached.html  crypto_aead_chacha20poly1305_ietf_encrypt.html  crypto_aead_chacha20poly1305_ietf_encrypt_detached.html  crypto_aead_chacha20poly1305_ietf_keygen.html  crypto_aead_chacha20poly1305_keygen.html  crypto_aead_xchacha20poly1305_ietf_decrypt.html  crypto_aead_xchacha20poly1305_ietf_decrypt_detached.html  crypto_aead_xchacha20poly1305_ietf_encrypt.html  crypto_aead_xchacha20poly1305_ietf_encrypt_detached.html  crypto_aead_xchacha20poly1305_ietf_keygen.html  crypto_box_beforenm.html  crypto_box_detached.html  crypto_box_easy.html  crypto_box_keypair.html  crypto_box_nonce.html  crypto_box_open_detached.html  crypto_box_open_detached_afternm.html  crypto_box_open_easy.html  crypto_box_seal.html  crypto_box_seal_open.html  crypto_box_seed_keypair.html  crypto_generichash.html  (+23 more)
(+163 files in other folders)
