[package]
name = "sodium"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.2.0", features = ["napi6"] }
napi-derive = "2.2.0"
sodiumoxide = { path = "./sodiumoxide" }
libsodium-sys = { path = "./sodiumoxide/libsodium-sys" }
dryoc = { git = "https://github.com/brndnmtthws/dryoc" }
libc = "0.2.121"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
