[package]
name = "sodium"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.4.3", features = ["napi6"] }
napi-derive = "2.4.1"
sodiumoxide = { git = "https://github.com/devtomio/sodiumoxide" }
dryoc = { git = "https://github.com/brndnmtthws/dryoc" }
libc = "0.2.125"

[build-dependencies]
napi-build = "1.2.1"

[profile.release]
lto = true
overflow-checks = false
