[package]
name = "sodium"
version = "0.4.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.13.2", features = ["napi6"] }
napi-derive = "2.13.0"
sodiumoxide = { git = "https://github.com/devtomio/sodiumoxide" }
dryoc = { git = "https://github.com/brndnmtthws/dryoc" }
libc = "0.2.147"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
overflow-checks = false
